tests/macro-tests/cases/widget_new/malformed_property_path4.stderr
error: expected identifier
 --> cases/widget_new/malformed_property_path4.rs:6:23
  |
6 |         zng::layout:: = 0;
  |                       ^
