tests/macro-tests/cases/widget_new/malformed_property_path4.rs
use zng::{widget::Wgt, APP};

fn main() {
    let _scope = APP.minimal();
    let _ = Wgt! {
        zng::layout:: = 0;
    };
}
